# im-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml  build.rs
common/src/: lib.rs  proto.rs  util.rs
common/src/proto/: abi.rs
common/src/util/: dao.rs  error.rs
common/src/util/dao/: cache.rs  database.rs
proto/: abi.proto
server/: Cargo.toml
server/src/: main.rs  service.rs
server/src/service/: message.rs
