[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
common = { path = "../common" }
futures = "0.3.28"
prost = "0.11.9"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
