[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
redis = { version = "0.23.0", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql", "chrono"] }
thiserror = "1.0.40"
tonic = "0.9.2"
prost = "0.11.9"

[build-dependencies]
prost-build = "0.11.9"