[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
bytes = "1.4.0"
flate2 = "1.0.25"
prost = "0.11.9"
tracing = "0.1.37"
tokio = { version = "1.28.0", features = [ "full" ] }
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"
tracing-subscriber = "0.3.17"
anyhow = "1.0.71"
async-prost = "0.4.0"
futures = "0.3.28"
futures-sink = "0.3.28"
futures-core = "0.3.28"
tokio-util = { version = "0.7.8", features = ["codec"] }

[build-dependencies]
prost-build = "0.11.9"
